--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_auth: ^0.15.4
   cloud_firestore: ^0.13.3
   firebase_storage: ^3.1.1
+  barcode_scan: ^2.0.1
 
 dev_dependencies:
   flutter_test:
